[package]
name = "relaunch"
description = "Relaunch is a crate for bundling and relaunching macOS applications, in order to access OS features that are only available to app bundles and not command-line applications."
keywords = ["mac", "osx", "bundle", "objc", "appkit"]
categories = ["os", "os::macos-apis", "api-bindings", "gui"]
homepage = "https://github.com/maaku/relaunch"
repository = "https://github.com/maaku/relaunch"
version = "0.1.2"
authors = ["Mark Friedenach <mark@friedenbach.org>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5"
objc = "0.2.7"

[dev-dependencies]
winit = "0.28.2"

[[test]]
name = "simple"
harness = false
