[package]
name = "relaunch"
description = "Relaunch is a crate for bundling and relaunching macOS applications, in order to access OS features that are only available to app bundles and not command-line applications."
keywords = ["mac", "osx", "bundle", "objc", "appkit"]
categories = ["os", "os::macos-apis", "api-bindings", "gui"]
homepage = "https://github.com/maaku/relaunch"
repository = "https://github.com/maaku/relaunch"
version = "0.1.4"
authors = ["Mark Friedenach <mark@friedenbach.org>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["winit"]

[dependencies]
dirs = "5"
winit = { version = "0.29", optional = true}

# macOS platform support
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = ["NSApplication", "NSResponder"] }
objc2-foundation = { version = "0.2.2", features = ["NSBundle", "NSString", "NSThread"] }

# Android platform support
[target.'cfg(target_os = "android")'.dependencies]
# Synchronize to make sure we depend on the same version as winit
android-activity = { version = "0.5.2", features = ["game-activity"] }

# Web platform support
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.93"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.43"

[[example]]
name = "terminal"
required-features = ["winit"]

[[example]]
name = "winit"
required-features = ["winit"]

# The cargo test harness runs the tests on a separate thread, whereas we need to be running from the
# main thread to access the AppKit APIs.
[[test]]
name = "simple"
harness = false
