[package]
name = "relaunch"
description = "Relaunch is a crate for bundling and relaunching macOS applications, in order to access OS features that are only available to app bundles and not command-line applications."
keywords = ["mac", "osx", "bundle", "objc", "appkit"]
categories = ["os", "os::macos-apis", "api-bindings", "gui"]
homepage = "https://github.com/maaku/relaunch"
repository = "https://github.com/maaku/relaunch"
version = "0.1.3"
authors = ["Mark Friedenach <mark@friedenbach.org>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5"

[dev-dependencies]
winit = "0.28.2"

# macOS platform support
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = ["NSApplication", "NSResponder"] }
objc2-foundation = { version = "0.2.2", features = ["NSBundle", "NSString", "NSThread"] }

# Android platform support
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.4.3", features = ["game-activity"] }

# The cargo test harness runs the tests on a separate thread, whereas we need to be running from the
# main thread to access the AppKit APIs.
[[test]]
name = "simple"
harness = false
